bin_PROGRAMS       = tdor socksserver
EXTRA_DIST         = README \
router_list.txt \
tun-linux.c.patch \
LICENSE \
LICENSE-GPLV3 \
tdor.8 \
tdor.spec

man_MANS = tdor.8
tdor_SOURCES      =  cell_handler.c  \
cell_handler.h \
internal_db.c   \
internal_db.h   \
udp-tor.c       \
tor-udp.h       \
dh_params.c     \
dh_params.h     \
link_conn.c     \
link_conn.h     \
util.c          \
util.h          \
file_conf.c     \
file_conf.h     \
local_circuit_builder.c \
local_circuit_builder.h \
tun_handler.c \
tun_handler.h \
tcp_scrub.h \
tcp_scrub.c \
transparent_proxy.h \
transparent_proxy.c \
ds_comm.h \
ds_comm.c \
udp_transport.h \
socks.h
socksserver_SOURCES	= socks_server.c \
socks.h
